# models/User.js
@@ -1,6 +1,5 @@
-// User model (for reference, not used by native driver)
 module.exports = {
   username: 'string',
   email: 'string',
-  favoriteRecipes: 'array' // array of recipe IDs
+  favoriteRecipes: 'array'
 };
